# DummyApi

./: README.md
collections/: book_library.json
collections/custom/: book_library.json
scripts/: data_injector.py  django_cp.sh  run_django.py
src/django/: MANIFEST.in  pyproject.toml  urls.py  views.py
src/django/DummyApi/: views.py
src/django/DummyApi/utils/: parser.py
src/django/utils/: getter.py  parser.py
src/dummyapi-django/: README.md  setup.py
src/dummyapi-django/dummyapi/: api_collections.py  views.py
src/dummyapi-django/dummyapi/utils/: getter.py  parser.py
tests/django/: .gitignore
tests/django/testing/testing/: settings.py  urls.py
