[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "DummyApi_pamekasancode"
version = "0.0.1"
authors = [
  { name="Pamekasancode", email="pamekasancode@gmail.com" },
]
description = "A simple fake api that can be integrated with various backend framework"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pamekasancode/DummyApi.git"

[tool.setuptools]
packages = ["DummyApi"]
include-package-data = true